# elementary-app-template

./: .gitignore  README.md  com.github.yourusername.yourrepositoryname.yml  meson.build
data/: com.github.yourusername.yourrepositoryname.desktop.in  com.github.yourusername.yourrepositoryname.metainfo.xml.in
po/: POTFILES  com.github.yourusername.yourrepositoryname.pot  de.po  es.po
src/: Application.vala  Counter.vala  CounterWidget.vala
tests/: CounterTests.vala  meson.build
tests/ui/: CounterWidgetUITests.vala  meson.build
tests/unit/: CounterTests.vala  meson.build
